Add @wordpress/global-styles-engine package as @woocommerce/email-editor dependency (#62319)
* Add @wordpress/global-styles-engine to email editor package

* Add exception from syncpack for @wordpress/global-styles-engine

We can't install wp-6.6 since this package is new and don't have this tag
WOOPRD-1278

---------

Co-authored-by: Brandon Kraft <public@brandonkraft.com>

--- a/.syncpackrc
+++ b/.syncpackrc
@@ -455,6 +455,15 @@
 			"pinVersion": "next"
 		},
 		{
+			"dependencies": [
+				"@wordpress/global-styles-engine"
+			],
+			"packages": [
+				"**"
+			],
+			"isIgnored": true
+		},
+		{
 			"label": "@wordpress/* runtime-dependencies",
 			"dependencies": [
 				"@wordpress/**"
