--- a/packages/js/email-editor/package.json
+++ b/packages/js/email-editor/package.json
@@ -79,6 +79,7 @@
 		"@wordpress/editor": "wp-6.6",
 		"@wordpress/element": "wp-6.6",
 		"@wordpress/format-library": "wp-6.6",
+		"@wordpress/global-styles-engine": "^1.3.0",
 		"@wordpress/hooks": "wp-6.6",
 		"@wordpress/html-entities": "wp-6.6",
 		"@wordpress/i18n": "wp-6.6",
