--- a/.github/workflows/release-assignment.yml
+++ b/.github/workflows/release-assignment.yml
@@ -117,7 +117,7 @@ jobs:
                 const teamMatch = matchingEvent.description.match(/Team:\s*(.+)/i);
                 if (teamMatch && teamMatch[1]) {
                   teamName = teamMatch[1].trim().toLowerCase().replace(/\s+/g, '-');
-                  console.log(`Team name from description: ${teamName}`);
+                  console.log(`Team name from the event description: ${teamName}`);
                 }
               }
             }
@@ -134,6 +134,7 @@ jobs:
       release-team: ${{ steps.trigger-upcoming-code-freeze-events.outputs.release-team }}
       release-lead: ${{ steps.trigger-upcoming-code-freeze-events.outputs.release-lead }}
       release-lead-google-login: ${{ steps.trigger-upcoming-code-freeze-events.outputs.release-lead-google-login }}
+      release-lead-slack-member-id: ${{ steps.trigger-upcoming-code-freeze-events.outputs.release-lead-slack-member-id }}
     steps:
       - uses: actions/github-script@v7
         id: trigger-upcoming-code-freeze-events
@@ -190,12 +191,35 @@ jobs:
               core.setOutput('release-team', responseBody.release_team);
               core.setOutput('release-lead', responseBody.release_lead);
               core.setOutput('release-lead-google-login', responseBody.release_lead_google_login);
+              core.setOutput('release-lead-slack-member-id', responseBody.release_lead_slack_member_id);
               core.setOutput('post', responseBody.post);
             }
         env:
           ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
           WPCOM_WEBHOOK_SECRET: ${{ secrets.WPCOM_WEBHOOK_SECRET }}
           WPCOM_RELEASE_WEBHOOK_URL: ${{ secrets.WPCOM_RELEASE_WEBHOOK_URL }}
+
+  send-slack-notification:
+    name: Send Slack notification
+    needs:
+      - trigger-upcoming-code-freeze-events
+      - check-upcoming-release-events
+    if: ${{ needs.check-upcoming-release-events.outputs.should-trigger-webhook == 'true' && needs.trigger-upcoming-code-freeze-events.outputs.post != '' }}
+    runs-on: ${{ ( github.repository == 'woocommerce/woocommerce' && 'blacksmith-2vcpu-ubuntu-2404' ) || 'ubuntu-latest' }}
+    steps:
+      - name: Send Slack notification
+        uses: archive/github-actions-slack@a62d71a4ea93e68cbdc37581166b0298bea512e9 # v2.10.0
+        with:
+          slack-bot-user-oauth-access-token: ${{ secrets.CODE_FREEZE_BOT_TOKEN }}
+          slack-channel: ${{ secrets.WOO_RELEASE_SLACK_CHANNEL }}
+          slack-optional-unfurl_links: false
+          slack-text: |
+            :woo: *The WooCommerce ${{ needs.check-upcoming-release-events.outputs.version }} release is coming up!* :woo:
+
+            The team responsible for this release is *Team ${{ needs.check-upcoming-release-events.outputs.team-name }}*.
+            <@${{ needs.trigger-upcoming-code-freeze-events.outputs.release-lead-slack-member-id }}>, make sure you choose a release DRI and update the release P2 accordingly.
+
+            :p2: <${{ needs.trigger-upcoming-code-freeze-events.outputs.post }}|Release P2 post>
 
   create-release-kickoff:
     name: Create Release Kickoff in Linear
