PayPal Standard Refactor 5: Moving the Webhook Handler class to the src folder (#62630)
* Moving the webhook handler class to the src folder

* Add changefile(s) from automation for the following project(s): woocommerce

* Fix PHPStan issues

* Fix PHPStan issues

* Fix PHPStan and lint issues

* Adding missing param types

* Fix test class package name

* Fix test class package name

* Update plugins/woocommerce/includes/gateways/paypal/includes/class-wc-gateway-paypal-webhook-handler.php

Co-authored-by: Mayisha <33387139+Mayisha@users.noreply.github.com>

* Update plugins/woocommerce/src/Gateways/PayPal/WebhookHandler.php

Co-authored-by: Mayisha <33387139+Mayisha@users.noreply.github.com>

* Update plugins/woocommerce/src/Gateways/PayPal/WebhookHandler.php

Co-authored-by: Mayisha <33387139+Mayisha@users.noreply.github.com>

* Adding the deprecation warning method call

* Update plugins/woocommerce/includes/gateways/paypal/includes/class-wc-gateway-paypal-webhook-handler.php

Co-authored-by: Malith Senaweera <6216000+malithsen@users.noreply.github.com>

* Renaming the changelog file

* Add changefile(s) from automation for the following project(s): woocommerce

* PHPStan baseline update

* PHPStan baseline update

* Removing duplicate changelog file

---------

Co-authored-by: github-actions <github-actions@github.com>
Co-authored-by: Mayisha <33387139+Mayisha@users.noreply.github.com>
Co-authored-by: Malith Senaweera <6216000+malithsen@users.noreply.github.com>

--- a/plugins/woocommerce/phpstan-baseline.neon
+++ b/plugins/woocommerce/phpstan-baseline.neon
@@ -25165,44 +25165,8 @@ parameters:
 			path: includes/gateways/paypal/includes/class-wc-gateway-paypal-response.php
 
 		-
-			message: '#^Method WC_Gateway_Paypal_Webhook_Handler\:\:process_checkout_order_approved\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: includes/gateways/paypal/includes/class-wc-gateway-paypal-webhook-handler.php
-
-		-
-			message: '#^Method WC_Gateway_Paypal_Webhook_Handler\:\:process_payment_authorization_created\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: includes/gateways/paypal/includes/class-wc-gateway-paypal-webhook-handler.php
-
-		-
-			message: '#^Method WC_Gateway_Paypal_Webhook_Handler\:\:process_payment_capture_completed\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: includes/gateways/paypal/includes/class-wc-gateway-paypal-webhook-handler.php
-
-		-
-			message: '#^Method WC_Gateway_Paypal_Webhook_Handler\:\:process_payment_capture_pending\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: includes/gateways/paypal/includes/class-wc-gateway-paypal-webhook-handler.php
-
-		-
-			message: '#^Method WC_Gateway_Paypal_Webhook_Handler\:\:process_webhook\(\) has no return type specified\.$#'
-			identifier: missingType.return
-			count: 1
-			path: includes/gateways/paypal/includes/class-wc-gateway-paypal-webhook-handler.php
-
-		-
 			message: '#^Method WC_Gateway_Paypal_Webhook_Handler\:\:process_webhook\(\) has parameter \$request with generic class WP_REST_Request but does not specify its types\: T$#'
 			identifier: missingType.generics
-			count: 1
-			path: includes/gateways/paypal/includes/class-wc-gateway-paypal-webhook-handler.php
-
-		-
-			message: '#^Parameter \#2 \$action_url of method WC_Gateway_Paypal_Request\:\:authorize_or_capture_payment\(\) expects string, string\|null given\.$#'
-			identifier: argument.type
 			count: 1
 			path: includes/gateways/paypal/includes/class-wc-gateway-paypal-webhook-handler.php
 
@@ -34017,12 +33981,6 @@ parameters:
 		-
 			message: '#^Class Automattic\\Jetpack\\Connection\\Rest_Authentication referenced with incorrect case\: Automattic\\Jetpack\\Connection\\REST_Authentication\.$#'
 			identifier: class.nameCase
-			count: 1
-			path: includes/rest-api/Controllers/Version3/class-wc-rest-paypal-webhooks-controller.php
-
-		-
-			message: '#^Constant WC_ABSPATH not found\.$#'
-			identifier: constant.notFound
 			count: 1
 			path: includes/rest-api/Controllers/Version3/class-wc-rest-paypal-webhooks-controller.php
 
@@ -64232,6 +64190,18 @@ parameters:
 			identifier: argument.type
 			count: 1
 			path: src/Gateways/PayPal/TransactAccountManager.php
+
+		-
+			message: '#^Constant WC_ABSPATH not found\.$#'
+			identifier: constant.notFound
+			count: 1
+			path: src/Gateways/PayPal/WebhookHandler.php
+
+		-
+			message: '#^Method Automattic\\WooCommerce\\Gateways\\PayPal\\WebhookHandler\:\:process_webhook\(\) has parameter \$request with generic class WP_REST_Request but does not specify its types\: T$#'
+			identifier: missingType.generics
+			count: 1
+			path: src/Gateways/PayPal/WebhookHandler.php
 
 		-
 			message: '#^Access to an undefined property object\:\:\$payload\.$#'
