PayPal Standard Refactor 7: Moving the PayPal Buttons class to the src folder (#62633)
* Moving the PayPal buttons class to the src folder

* Add changefile(s) from automation for the following project(s): woocommerce

* Fix namespace

* Fix PHPStan issue

* Add missing return types + deprecated warning method calls

* Fix require path

* Apply suggestion from @daledupreez

Co-authored-by: daledupreez <dale@automattic.com>

* Fix doc block return type

* Update plugins/woocommerce/src/Gateways/PayPal/Buttons.php

Co-authored-by: Malith Senaweera <6216000+malithsen@users.noreply.github.com>

* Fix test return type

* Fix tests

* Address review comment

* PHPStan baseline update

* Fix tests

* Fix tests

* Fix tests

* Fix tests

* Using the new Request class

* Baseline file update

* Moving import above the ABSPATH check

* Revert class loading removal

---------

Co-authored-by: github-actions <github-actions@github.com>
Co-authored-by: daledupreez <dale@automattic.com>
Co-authored-by: Malith Senaweera <6216000+malithsen@users.noreply.github.com>

--- a/plugins/woocommerce/phpstan-baseline.neon
+++ b/plugins/woocommerce/phpstan-baseline.neon
@@ -24511,18 +24511,6 @@ parameters:
 			path: includes/gateways/cod/class-wc-gateway-cod.php
 
 		-
-			message: '#^Method WC_Gateway_Paypal_Buttons\:\:get_current_page_for_app_switch\(\) should return string but returns string\|false\.$#'
-			identifier: return.type
-			count: 1
-			path: includes/gateways/paypal/class-wc-gateway-paypal-buttons.php
-
-		-
-			message: '#^Parameter \#1 \$post of function get_permalink expects int\|WP_Post, int\|false given\.$#'
-			identifier: argument.type
-			count: 1
-			path: includes/gateways/paypal/class-wc-gateway-paypal-buttons.php
-
-		-
 			message: '#^Access to an undefined property object\:\:\$ACK\.$#'
 			identifier: property.notFound
 			count: 1
@@ -62704,12 +62692,6 @@ parameters:
 			path: src/Blocks/Payments/Integrations/Cheque.php
 
 		-
-			message: '#^Constant WC_ABSPATH not found\.$#'
-			identifier: constant.notFound
-			count: 1
-			path: src/Blocks/Payments/Integrations/PayPal.php
-
-		-
 			message: '#^Method Automattic\\WooCommerce\\Blocks\\Payments\\Integrations\\PayPal\:\:initialize\(\) has no return type specified\.$#'
 			identifier: missingType.return
 			count: 1
@@ -64028,6 +64010,18 @@ parameters:
 			identifier: new.static
 			count: 1
 			path: src/Gateways/PayPal/AddressRequirements.php
+
+		-
+			message: '#^Method Automattic\\WooCommerce\\Gateways\\PayPal\\Buttons\:\:get_current_page_for_app_switch\(\) should return string but returns string\|false\.$#'
+			identifier: return.type
+			count: 1
+			path: src/Gateways/PayPal/Buttons.php
+
+		-
+			message: '#^Parameter \#1 \$post of function get_permalink expects int\|WP_Post, int\|false given\.$#'
+			identifier: argument.type
+			count: 1
+			path: src/Gateways/PayPal/Buttons.php
 
 		-
 			message: '#^Method Automattic\\WooCommerce\\Gateways\\PayPal\\Request\:\:send_wpcom_proxy_request\(\) never returns array so it can be removed from the return type\.$#'
