Stub WC constants for PHPStan, establish new baseline. (#62804)

--- a/plugins/woocommerce/phpstan.neon
+++ b/plugins/woocommerce/phpstan.neon
@@ -20,7 +20,14 @@ parameters:
 		- vendor/wordpress/abilities-api
 	scanFiles:
 		- php-stubs/wc-admin-feature-config.php
+		- php-stubs/wc-constants.php
 	treatPhpDocTypesAsCertain: false
+	dynamicConstantNames:
+		# WC_TAX_ROUNDING_MODE can be 1, 2 (ints) or 'auto' (string in tests).
+		# See tests/legacy/bootstrap.php and wc-core-functions.php:wc_get_tax_rounding_mode()
+		WC_TAX_ROUNDING_MODE: 1|2|'auto'
+		# WC_TEMPLATE_DEBUG_MODE can be overridden in wp-config.php
+		WC_TEMPLATE_DEBUG_MODE: bool
 	ignoreErrors:
 		- identifier: missingType.iterableValue
 	parallel:
