Update stylelint settings to allow units in 0 values when used inside calc() (#62819)
* Update stylelint settings to allow units in 0 values when used inside calc()

* Add changelog file

--- a/plugins/woocommerce/client/blocks/.stylelintrc.json
+++ b/plugins/woocommerce/client/blocks/.stylelintrc.json
@@ -9,6 +9,10 @@
 		"no-duplicate-selectors": null,
 		"rule-empty-line-before": null,
 		"selector-class-pattern": null,
-		"value-keyword-case": null
+		"value-keyword-case": null,
+		"length-zero-no-unit": [
+			true,
+			{ "ignoreFunctions": [ "calc", "var" ] }
+		]
 	}
 }
