PHPStan - add Action Scheduler to scanned directories (#62858)
* Add scanning of Action Scheduler files

* Remove unnecessary phpstan-ignore comments

* Fix newly found type issues

* Update phpstan baseline - remove ignored errors

* Add changefile(s) from automation for the following project(s): woocommerce

* Revert changing arguments in as_unschedule_action

---------

Co-authored-by: woocommercebot <woocommercebot@users.noreply.github.com>

--- a/plugins/woocommerce/phpstan.neon
+++ b/plugins/woocommerce/phpstan.neon
@@ -18,6 +18,7 @@ parameters:
 		- vendor/autoload.php
 	scanDirectories:
 		- vendor/wordpress/abilities-api
+		- packages/action-scheduler
 	scanFiles:
 		- php-stubs/wc-admin-feature-config.php
 		- php-stubs/wc-constants.php
