Add woocommerce_email_editor_site_theme filter (#62889)
* Add woocommerce_email_editor_site_theme filter

Add a filter in Site_Style_Sync_Controller to allow overriding the site
theme used when syncing global styles for the email editor. This is useful
for environments where theme data is not directly accessible (e.g., wp.com
Atomic and Jetpack sites).

* Fix test

* Fix test

* Fix tests again

* Add woocommerce_email_editor_site_theme filter to docs

* fix(docs): add @docsearch/core dependency required for Docusaurus build

--- a/docs/_docu-tools/package.json
+++ b/docs/_docu-tools/package.json
@@ -17,6 +17,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@docsearch/core": "^4.5.2",
     "@docusaurus/core": "^3.9.2",
     "@docusaurus/faster": "^3.9.2",
     "@docusaurus/preset-classic": "^3.9.2",
