--- a/.github/workflows/prepare-package-release.yml
+++ b/.github/workflows/prepare-package-release.yml
@@ -17,7 +17,7 @@ jobs:
       contents: write
       pull-requests: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
         with:
           fetch-depth: '0'
 
@@ -49,11 +49,13 @@ jobs:
         run: echo "str=${{ github.event.inputs.packages }}" >> $GITHUB_OUTPUT
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e #v7.0.8
+        uses: peter-evans/create-pull-request@c0f553fe549906ede9cf27b5156039d195d2ece0 #v8.1.0
         env:
           HUSKY: '0' # pre-push hook incorrectly considers the working branch as the push-to branch and the push will fail if the working branch is trunk
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.WC_BOT_PR_CREATE_TOKEN || secrets.GITHUB_TOKEN }}
+          author: 'woocommercebot <woocommercebot@users.noreply.github.com>'
+          committer: 'woocommercebot <woocommercebot@users.noreply.github.com>'
           commit-message: 'Automated change: Prep ${{ steps.all_description.outputs.str || steps.specific_description.outputs.str }} for release.'
           branch: prepare-releases/packages-${{ steps.date.outputs.date }}
           delete-branch: true
